--- a/static/home.html
+++ b/static/home.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="home.css">
+    <title>Home</title>
 </head>
 
 <body>
-
+    <div>
+        <h2>Mohammad Hossein Javadi</h2>
+        <h3>CE at UT</h3>
+    </div>
+    <script src="src/home.js"></script>
 </body>
 
 </html>
