--- a/static/home.html
+++ b/static/home.html
@@ -8,9 +8,14 @@
 </head>
 
 <body>
-    <div>
+    <div class="main-container">
         <h2>Mohammad Hossein Javadi</h2>
         <h3>CE at UT</h3>
+        <div class="icon-box">
+            <img src="pics/c-original.svg" alt="C Icon">
+            <img src="pics/git.svg" alt="Git Icon">
+            <img src="pics/cplusplus-original.svg" alt="C++ Icon">
+        </div>
     </div>
     <script src="src/home.js"></script>
 </body>
