links and paragraph divs

--- a/static/home.html
+++ b/static/home.html
@@ -11,10 +11,17 @@
     <div class="main-container">
         <h2>Mohammad Hossein Javadi</h2>
         <h3>CE at UT</h3>
+        <div class="profile">
+            <p>CE student at UT.</p>
+            <p></p>
+        </div>
         <div class="icon-box">
             <img src="pics/c-original.svg" alt="C Icon">
             <img src="pics/git.svg" alt="Git Icon">
             <img src="pics/cplusplus-original.svg" alt="C++ Icon">
+        </div>
+        <div class="links">
+
         </div>
     </div>
     <script src="src/home.js"></script>
