--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
             <img src="pics/git.svg" alt="Git Icon">
             <img src="pics/cplusplus-original.svg" alt="C++ Icon">
         </div>
+        <br><br><br> <br>
         <div class="links">
-
+            <h3>My links</h3>
+            <a href="https://github.com/NOoOB-WEB"><img src="pics/github.png" alt="logo"></a>
+            <a href="mailto:mohammadhj841019@gmail.com"><img src="pics/gmail-logo-icon.png" alt="logo"></a>
         </div>
     </div>
     <script src="src/home.js"></script>
