--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <div class="main-container">
         <h2>Mohammad Hossein Javadi</h2>
-        <h3>CE at UT</h3>
+        <h3>CE at UT</h3><br><br>
         <div class="profile">
             <p>CE student at UT.</p>
-            <p></p>
+            <p>HI! I'm learning Computer science at University of tehran. Check the mastery box and links to learn more
+                about me!</p>
         </div>
         <div class="icon-box">
             <img src="pics/c-original.svg" alt="C Icon">
